# fdo-basedirs

./: LICENSE  README  fdo-basedirs.cabal
System/Freedesktop/: Directories.hs
